# internal/adapters/delivery/docs/swagger.json
@@ -12,41 +12,6 @@
     "basePath": "/api",
     "paths": {
         "/question": {
-            "get": {
-                "security": [
-                    {
-                        "bearerAuth": []
-                    }
-                ],
-                "description": "Lista todas as questões",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Question"
-                ],
-                "summary": "Lista todas as questões",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/response.Question"
-                            }
-                        }
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/response.ErrorResponse"
-                        }
-                    }
-                }
-            },
             "post": {
                 "security": [
                     {
@@ -112,6 +77,54 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/response.InfoResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/question/filter": {
+            "post": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "description": "Lista questões por filtro",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Question"
+                ],
+                "summary": "Lista questões por filtro",
+                "parameters": [
+                    {
+                        "description": "Filtro para busca de questões",
+                        "name": "filter",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.FilterDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/response.Question"
+                            }
                         }
                     },
                     "400": {
@@ -209,14 +222,14 @@
                 }
             }
         },
-        "/question/{organization}": {
+        "/question/{page}": {
             "get": {
                 "security": [
                     {
                         "bearerAuth": []
                     }
                 ],
-                "description": "Lista todas as questões de uma organização",
+                "description": "Lista todas as questões",
                 "consumes": [
                     "application/json"
                 ],
@@ -226,12 +239,12 @@
                 "tags": [
                     "Question"
                 ],
-                "summary": "Lista todas as questões de uma organização",
+                "summary": "Lista todas as questões",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "Nome da organização",
-                        "name": "organization",
+                        "type": "integer",
+                        "description": "Número da página",
+                        "name": "page",
                         "in": "path",
                         "required": true
                     }
@@ -257,38 +270,72 @@
         }
     },
     "definitions": {
-        "request.QuestionDTO": {
+        "request.FilterDTO": {
             "type": "object",
             "properties": {
-                "answer": {
-                    "type": "string"
-                },
                 "discipline": {
                     "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "model": {
-                    "type": "string"
-                },
-                "options": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
                 },
                 "organization": {
                     "type": "string"
                 },
-                "question": {
-                    "type": "string"
+                "quantity": {
+                    "type": "integer"
                 },
                 "topic": {
                     "type": "string"
                 },
                 "year": {
                     "type": "string"
+                }
+            }
+        },
+        "request.QuestionDTO": {
+            "type": "object",
+            "properties": {
+                "answer": {
+                    "type": "string",
+                    "example": "Aumentar a qualidade"
+                },
+                "discipline": {
+                    "type": "string",
+                    "example": "ENGENHARIA DE PRODUÇÃO"
+                },
+                "id": {
+                    "type": "string",
+                    "example": "550e8400-e29b-41d4-a716-446655440000"
+                },
+                "model": {
+                    "type": "string",
+                    "example": "multiple_choice"
+                },
+                "options": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "[\"Aumentar a produtividade\"",
+                        " \"Diminuir a produtividade\"",
+                        " \"Aumentar a qualidade\"",
+                        " \"Diminuir a qualidade\"]"
+                    ]
+                },
+                "organization": {
+                    "type": "string",
+                    "example": "CESGRANRIO"
+                },
+                "question": {
+                    "type": "string",
+                    "example": "Qual o objetivo da administração da produção?"
+                },
+                "topic": {
+                    "type": "string",
+                    "example": "ADMINISTRAÇÃO DA PRODUÇÃO"
+                },
+                "year": {
+                    "type": "string",
+                    "example": "2019"
                 }
             }
         },
