# internal/adapters/delivery/http/handlers/dto/request/filterDTO.go
@@ -1,9 +1,0 @@
-package request
-
-type FilterDTO struct {
-	Organization string `json:"organization"`
-	Year         string `json:"year"`
-	Discipline   string `json:"discipline"`
-	Topic        string `json:"topic"`
-	Quantity     int64  `json:"quantity"`
-}
