# internal/adapters/delivery/http/handlers/dto/request/questionDTO.go
@@ -1,15 +1,0 @@
-package request
-
-import "github.com/google/uuid"
-
-type QuestionDTO struct {
-	ID           uuid.UUID `json:"id"`
-	Organization string    `json:"organization"`
-	Model        string    `json:"model"`
-	Year         string    `json:"year"`
-	Discipline   string    `json:"discipline"`
-	Topic        string    `json:"topic"`
-	Question     string    `json:"question"`
-	Options      []string  `json:"options"`
-	Answer       string    `json:"answer"`
-}
